hphp/test/zend/bad/unset_cv01.php
<?php
$x = "ok\n";
echo $x;
unset($x);
echo $x;
?>